--- a/app/views/owners/dashboard/index.html.erb
+++ b/app/views/owners/dashboard/index.html.erb
@@ -5,6 +5,7 @@
 <% if current_owner.restaurant.nil? %>
 	<p><%= link_to "Create Restaurant", new_owners_restaurant_path %>	
 <% else %>
+	<!-- create menu items link here -->
 	<p> <%= link_to "Show Restaurant", owners_restaurant_path(current_owner.restaurant) %>	
 <% end %>	
 
