Finish MenuItem Delete and Index as well

--- a/app/views/owners/dashboard/index.html.erb
+++ b/app/views/owners/dashboard/index.html.erb
@@ -6,7 +6,9 @@
 	<p><%= link_to "Create Restaurant", new_owners_restaurant_path %>	
 <% else %>
 	<!-- create menu items link here -->
+	<p> <%= link_to "Add MenuItem", new_owners_category_path %>	
 	<p> <%= link_to "Show Restaurant", owners_restaurant_path(current_owner.restaurant) %>	
+	<p> <%= link_to "Show Menu", owners_categories_path %>	
 <% end %>	
 
 <p><%= link_to "Sign Out", destroy_customer_session_path, method: :delete, data: {confirm: "Are you sure to signout?" } %> </p>
