--- a/app/views/owners/restaurants/show.html.erb
+++ b/app/views/owners/restaurants/show.html.erb
@@ -36,7 +36,7 @@
 	</div>
 	<br>
 	
-<%= link_to "Edit", edit_owners_restaurant_path(@restaurant) %>
-<%= link_to "Delete", owners_restaurant_path(@restaurant), method: :delete, data: {confirm: "Are you sure to delete?" } %>
+<%= link_to "Update Menu", edit_owners_restaurant_path(@restaurant) %>
+<%#= link_to "Delete", owners_restaurant_path(@restaurant), method: :delete, data: {confirm: "Are you sure to delete?" } %>
 
 <%= link_to "Back to home page", owners_dashboard_index_path %>
