--- a/app/views/owners/restaurants/_category_fields.html.erb
+++ b/app/views/owners/restaurants/_category_fields.html.erb
@@ -1,6 +1,6 @@
 <div class='nested-fields'>
     <div class="field">
-      <%= f.text_field :name, readonly: true %><%= link_to_remove_association "remove category", f %>
+      <%= f.text_field :name %><%= link_to_remove_association "remove category", f %>
     </div>
 </div>
 
