--- a/app/views/owners/restaurants/index.html.erb
+++ b/app/views/owners/restaurants/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing Categories</h1>
+<h1>Menu List</h1>
 
 <%= link_to "Update Menu", edit_owners_restaurant_path(current_owner.restaurant) %>
 <table>
@@ -7,11 +7,17 @@
     <tr>
       <th><h3><%= category.name %></h3></th>
       <tr>
+        <th><pr>Image                 </pr></th>
         <th><pre>Item Name            </pre></th>
         <th><pre>Price                </pre></th>
         <th><pre>Description          </pre></th>
-        <% category.menu_items.each do |item| %>
+        <% category.menu_items.with_attached_images.each do |item| %>
           <tr>
+            <% if item.images.attached? %>
+              <td><%= image_tag item.images.first, style: "width: 50px;eight: 50px;" %>
+            <% else %>
+              <td></td>
+            <% end %> 
             <td> <%= item.name %> </td>
             <% if item.variations.count > 0 %>
               <td> Starting From <%= item.variations.order(:price).first.price.to_i%> Rs</td>
