--- a/app/views/customers/dashboard/index.html.erb
+++ b/app/views/customers/dashboard/index.html.erb
@@ -4,6 +4,22 @@
 <p><%= link_to "Sign Out", destroy_customer_session_path, method: :delete, data: {confirm: "Are you sure to signout?" } %> </p>
 
 <p><%= link_to "Edit Profile", edit_customer_registration_path %> </p>
+
+<%= search_form_for [:customers, @q], url: customers_dashboard_index_path do |f| %>
+	
+	<br>
+	<h3> Search
+  <%#= f.label :name %>
+  <%= f.search_field :name_cont %>
+</h3>
+
+<% end %>
+
+<%= content_tag :table do %>
+  <%= content_tag :th, sort_link(@q, :name) %>
+  <%= content_tag :th, sort_link(@q, :city) %>
+  <%= content_tag :th, sort_link(@q, :delivery_fee) %>
+<% end %>
 <h1>All Restaurants</h1>
 
 <% unless @restaurants.blank? %>
