--- a/app/views/customers/dashboard/index.html.erb
+++ b/app/views/customers/dashboard/index.html.erb
@@ -47,7 +47,7 @@
             <td><%= restaurant.delivery_fee %></td>
             <td><%= restaurant.price %></td>
             <td><%= restaurant.delivery_time %></td>
-            <td><%= link_to "Show", owners_restaurant_path(restaurant) %></td>
+            <td><%#= link_to "Show", owners_restaurant_path(restaurant) %></td>
             <!-- <td><%#= link_to "Edit", edit_restaurant_path(restaurant) %></td>
             <td><%#= link_to "Destroy", restaurant, method: :delete, data: { confirm: "Are you sure?" } %></td>  -->
           </tr>
