--- a/app/views/customers/restaurants/show.html.erb
+++ b/app/views/customers/restaurants/show.html.erb
@@ -1,4 +1,8 @@
+<%= render 'customers/shared/error_messages', resource: @order %>
 <div>
+  <% if @restaurant.categories.first.menu_items.first.images.attached? %>
+                <div><%= image_tag @restaurant.categories.first.menu_items.first.images.first %> </div>
+  <% end %>
   <strong><%= @restaurant.name %></strong>&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;<%= @restaurant.price %>
   <br>
   <%= @restaurant.address %>
@@ -16,85 +20,104 @@
 </div>
 <br>
 
-<% @restaurant.categories.each do |category| %>
-  <table>    
 
-    <tr>
-      <th><h3>Category: <%= category.name %></h3></th>
-    </tr>
-    <tr>
-      <th>Image</th>
-      <th>Item Name</th>
-      <th>Price</th>
-      <th>Description</th>
-    </tr>
-      <% category.menu_items.with_attached_images.each do |item| %>
+    <% @restaurant.categories.each do |category| %>
+      <table>    
+
         <tr>
-          <% if item.images.attached? %>
-            <td><%= image_tag item.images.first, style: "width: 50px;eight: 50px;" %> </td>
-          <% else %>
-            <td></td>
-          <% end %> 
-          <td> <%= item.name %> </td>
-          <% if item.variations.count > 0 %>
-            <td> Starting From <%= item.variations.order(:price).first.price.to_i%> Rs</td>
-          <% else %>
-            <td> <%= item.price %></td>
-          <% end %>
-          <td> <%= item.note %> </td>
-          <!-- <td> <%#= link_to "Edit", edit_owners_restaurant_path(item) %></td> -->
-          <!-- <td> <%#= link_to "Delete", owners_restaurant_path(item), method: :delete, data: {confirm: "Are you sure to delete?"} %> </td>
-              -->
+          <th><h3>Category: <%= category.name %></h3></th>
         </tr>
-        
-        <% if item.variations.count > 0 %>
-          <tr>
-            <table>
-              <tr>
-                <h5>Variations </h5>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Description</th>
-              </tr>
-              <% item.variations.each do |variation| %>
-              <tr>
-                <td> <%= variation.name %></td>
-                <td> <%= variation.price %></td>
-                <td> <%= variation.description %></td>
-              </tr>
+        <tr>
+          <th>Image</th>
+          <th>Item Name</th>
+          <th>Price</th>
+          <th>Description</th>
+          
+        </tr>
+          <% category.menu_items.with_attached_images.each do |item| %>
+          <%= form_tag customers_orders_path, method: :post, remote: true do %>
+            <tr>
+              <% if item.images.attached? %>
+                <td><%= image_tag item.images.first, style: "width: 50px;eight: 50px;" %> </td>
+              <% else %>
+                <td></td>
+              <% end %> 
+              <td> <%= item.name %> </td>
+              <% if item.variations.count > 0 %>
+                <td> Starting From <%= item.variations.order(:price).first.price.to_i%> Rs</td>
+              <% else %>
+                <td> <%= item.price %></td>
               <% end %>
-            </table>
-          </tr>
-        <% end %>
+              
+              <td> <%= item.note %> </td>
+              <%= hidden_field_tag :item_id, item.id %>
+              <td> <%= submit_tag "Add" %> </td>
+              <!-- <td> <%#= link_to "Edit", edit_owners_restaurant_path(item) %></td> -->
+              <!-- <td> <%#= link_to "Delete", owners_restaurant_path(item), method: :delete, data: {confirm: "Are you sure to delete?"} %> </td>
+                  -->
 
-        <% if item.add_ons.count > 0 %>
-          <tr>
-            <table>
+            </tr>
+            
+            <% if item.variations.count > 0 %>
               <tr>
-                <h5>Add-Ons</h5>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Description</th>
+                <table>
+                  <tr>
+                    <h5>Variations </h5>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Description</th>
+                  </tr>
+                  <% item.variations.each do |variation| %>
+                  <tr>
+                    <td> <%= variation.name %></td>
+                    <td> <%= variation.price %></td>
+                    <td> <%= variation.description %></td>
+                    <td> <%= radio_button_tag :variation_id, variation.id %> </td>
+                  </tr>
+                  <% end %>
+                </table>
               </tr>
-              <% item.add_ons.each do |add| %>
+            <% end %>
+
+            <% if item.add_ons.count > 0 %>
               <tr>
-                <td> <%= add.name %></td>
-                <td> <%= add.price %></td>
-                <td> <%= add.description %></td>
+                <table>
+                  <tr>
+                    <h5>Add-Ons</h5>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Description</th>
+                  </tr>
+                  <% item.add_ons.each do |add| %>
+                  <tr>
+                    <td> <%= add.name %></td>
+                    <td> <%= add.price %></td>
+                    <td> <%= add.description %></td>
+                    <td> <%= radio_button_tag :add_id, add.id %>
+                  </tr>
+                  <% end %>
+                </table>
               </tr>
-              <% end %>
-            </table>
-          </tr>
+
+            <tr>-------------------------------------------------------------------------------------------</tr>
+    
+            <% end %>
         <% end %>
-    <!-- <td><%#= article.text %></td>
-     <td><%#= link_to 'Show', article_path(article) %></td>-->
     <% end %>
-<tr>------------------------------------------------------------------------------------------------------</tr>
-<% end %>
-        
-</table>
+            
+    </table>
 
-<%#= link_to "Update Menu", edit_owners_restaurant_path(@restaurant) %>
-<%#= link_to "Delete", owners_restaurant_path(@restaurant), method: :delete, data: {confirm: "Are you sure to delete?" } %>
+<% end %>  <!-- Form end -->
 
-<%#= link_to "Back to home page", owners_dashboard_index_path %>
+
+<div class="cart" style=" margin-left: 930px;margin-top: -643px;">
+  <p> <%= @restaurant.delivery_time %> </p>
+  <h3>Your order <%= @restaurant.name %> </h3>
+  <div class="order_items" > </div>
+  <p> --------------------------------------------------------</p>
+  <div class="sub_total">Subtotal: 0</div>
+  <%#= hidden_field_tag :restaurant_id, @restaurant.id %>
+  <div class="DeliveryFee">Delivery Fee: <%= @restaurant.delivery_fee %> </div>
+  <div class="total">Total: 0</div>
+  <%#= render 'customers/orders/cart' %>
+</div>
