Finish AddToCart with variations and add-ons

--- a/app/views/customers/orders/_cart.html.erb
+++ b/app/views/customers/orders/_cart.html.erb
@@ -1,14 +1,26 @@
-<% if !@order_item.blank? %>
-  <table>
-  <%#= @order.order_items.class %>
-  <% @order.order_items.each do |oi| %>
-    <tr>
-      <td><%= button_to "+", customers_orders_path, data: { id: oi.id, item_id: oi.menu_item.id } %> </td>
-      <td><%= button_to "-", customers_orders_path, id: oi.id %> </td>
-      <td><%= oi.quantity %> x </td>
+<table>
+<%#= @order.order_items.class %>
+<% @order.order_items.order(created_at: :asc).each do |oi| %>
+  <tr>
+    <td><%= button_to "+", customers_orders_path, data: { id: oi.id, item_id: oi.menu_item.id } %> </td>
+    <td><%= button_to "-", customers_orders_path, id: oi.id %> </td>
+    <td><%= oi.quantity %> x </td>
+    <% if oi.variation.present? %>
+      <td><%= "#{oi.name} - #{oi.variation.name}"%></td>
+    <% else %>
       <td><%= oi.name %></td>
-      <td><%= oi.price * oi.quantity %> </td>
-    </tr>
-  <% end %>
-  </table>
+    <% end %>
+
+    <td><%= oi.price * oi.quantity %> </td>
+    <% oi.order_add_ons.each do |add_on| %>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td><%= "+ #{add_on.name}" %></td>
+      </tr>
+    <% end %>
+    
+  </tr>
 <% end %>
+</table>
