--- a/app/views/customers/orders/_cart.html.erb
+++ b/app/views/customers/orders/_cart.html.erb
@@ -34,3 +34,6 @@
 
 <div><%= button_to "Delete All", customers_order_path(@order), method: :delete, remote: true, data: {confirm: "Are you sure to clear cart?"} %> </div>
 
+<div class ="checkout" >
+  <%= button_to "Checkout", checkout_customers_order_path(@order), method: :patch %>
+</div>
