--- a/app/views/customers/orders/delete_cart_row.js.erb
+++ b/app/views/customers/orders/delete_cart_row.js.erb
@@ -1,2 +1,1 @@
-$(".order_items").html("<%= escape_javascript(render 'cart') %>")
-$(".sub_total").html("Subtotal: <%= @order.sub_total %>")
+<%= render 'show_cart' %>
