--- a/app/views/customers/orders/index.html.erb
+++ b/app/views/customers/orders/index.html.erb
@@ -1,12 +1,44 @@
+<h2> Active Orders</h2>
+<ul>
+<% @orders.where(status: "in_process").order(created_at: :desc).each do |order| %>
+  <li>
+    <h3> <%= order.order_items.first.menu_item.category.restaurant.name %> </h3>
+    <%= order.created_at %>
+    <div class ="total" style="margin-left: 250px;margin-top: -18px"> <%= "Rs #{order.sub_total}" %></div>
+    <div class ="view_order" style="margin-left: 250px" >
+      <%= button_to "View", customers_restaurant_path(order.order_items.first.menu_item.category.restaurant), method: :get, params: {order_id: order.id, func: "view_order"} %> </div>
+    <ul>
+    <% order.order_items.order(created_at: :asc).each do |oi| %>
+      <li>
+        <%= oi.quantity %> x 
+        <% if oi.variation.present? %>
+          <%= "#{oi.name} - #{oi.variation.name}"%>
+        <% else %>
+          <%= oi.name %>
+        <% end %>
+      <ul>
+        <% oi.order_add_ons.each do |add_on| %>
+          <li><%= "+ #{add_on.name}" %></li>
+        <% end %>
+      </ul>
+    </li>
+    <% end %>
+    </ul>
+      
+  </li>
+<% end %>
+</ul>
+
+
 <h2> Past Orders </h2>
 <ul>
-<% @orders.order(created_at: :desc).each do |order| %>
+<% @orders.where(status: "completed").order(created_at: :desc).each do |order| %>
   <li>
     <h3> <%= order.order_items.first.menu_item.category.restaurant.name %> </h3>
     <%= order.created_at %>
     <div class ="total" style="margin-left: 250px;margin-top: -18px"> <%= "Rs #{order.sub_total}" %></div>
     <div class ="re_order" style="margin-left: 250px" >
-      <%= button_to "ReOrder", customers_restaurant_path(order.order_items.first.menu_item.category.restaurant), method: :get, params: {order_id: order.id} %> </div>
+      <%= button_to "ReOrder", customers_restaurant_path(order.order_items.first.menu_item.category.restaurant), method: :get, params: {order_id: order.id, func: "re_order"} %> </div>
     <ul>
     <% order.order_items.order(created_at: :asc).each do |oi| %>
       <li>
