--- a/app/views/customers/orders/index.html.erb
+++ b/app/views/customers/orders/index.html.erb
@@ -7,6 +7,10 @@
     <div class ="total" style="margin-left: 250px;margin-top: -18px"> <%= "Rs #{order.sub_total}" %></div>
     <div class ="view_order" style="margin-left: 250px" >
       <%= button_to "View", customers_restaurant_path(order.order_items.first.menu_item.category.restaurant), method: :get, params: {order_id: order.id, func: "view_order"} %> </div>
+
+    <div class ="delete_order" style="margin-left: 300px;margin-top: -19px" >
+      <%= button_to "Delete", customers_order_path(order.id), method: :delete, data: {confirm: "Are you sure to delete"} %> </div>
+      
     <ul>
     <% order.order_items.order(created_at: :asc).each do |oi| %>
       <li>
